<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ass.mad.arnhem.han.planninghelper.CreateTaskActivity"
    android:layout_margin="16dp">

    <RelativeLayout
        android:id="@+id/taskDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailsTitelLayout">

            <ImageView
                android:id="@+id/detailsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/list"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Title"
                android:layout_toRightOf="@+id/detailsIcon"
                android:layout_marginLeft="8dp"
                android:id="@+id/detailsTitle" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginRight="8dp"
            android:text="@string/details_description_label_text"
            android:layout_below="@+id/detailsTitelLayout"
            android:id="@+id/detailsDescriptionLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
            android:layout_toRightOf="@+id/detailsDescriptionLabel"
            android:layout_alignTop="@+id/detailsDescriptionLabel"
            android:id="@+id/detailsDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/details_date_label_text"
            android:layout_below="@+id/detailsDescription"
            android:id="@+id/detailsDateLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="*Date*"
            android:layout_toRightOf="@+id/detailsDescriptionLabel"
            android:layout_alignTop="@+id/detailsDateLabel"
            android:id="@+id/detailsDate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/details_starttime_label_text"
            android:layout_below="@id/detailsDate"
            android:id="@+id/detailsStartTimeLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="startTime"
            android:layout_toRightOf="@+id/detailsDescriptionLabel"
            android:layout_alignTop="@+id/detailsStartTimeLabel"
            android:id="@+id/detailsStartTime" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/details_endtime_label_text"
            android:layout_below="@+id/detailsStartTime"
            android:id="@+id/detailsEndTimeLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="endTime"
            android:layout_toRightOf="@+id/detailsDescriptionLabel"
            android:layout_alignTop="@+id/detailsEndTimeLabel"
            android:id="@+id/detailsEndTime" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/details_duration_label_text"
            android:layout_below="@+id/detailsEndTime"
            android:id="@+id/detailsDurationLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="duration"
            android:layout_toRightOf="@+id/detailsDescriptionLabel"
            android:layout_alignTop="@+id/detailsDurationLabel"
            android:id="@+id/detailsDuration" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/detailsDevider"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_margin="16dp"
        android:background="@color/colorDevider"
        android:layout_below="@+id/taskDetails"/>

    <LinearLayout
        android:layout_below="@+id/detailsDevider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detailsCheckboks">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/detailsTaskDoneLabel"
                    android:layout_centerVertical="true"
                    android:text="Taak voltooid: "/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detailsTaskDoneCheckbox"
                    android:layout_toRightOf="@+id/detailsTaskDoneLabel"
                    android:onClick="onCheckboxClicked" />


            </RelativeLayout>

            <Button
                android:id="@+id/detailsPictureBtn"
                android:layout_below="@+id/detailsCheckboks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Picture" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/detailsPicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>